# django_event_organizer

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/test_project/: .env.example
backend/test_project/api/: apps.py  urls.py
backend/test_project/api/serializers/: __init__.py  event.py  image.py  organization.py  user.py
backend/test_project/api/views/: event.py  organization.py  user.py
backend/test_project/chat/: admin.py  apps.py  consumers.py  middleware.py  routing.py  tokenizer.py  urls.py  views.py
backend/test_project/chat/migrations/: 0001_initial.py  0002_message_user.py  0003_alter_room_name.py
backend/test_project/chat/models/: message.py  room.py
backend/test_project/chat/templates/chat/: base.html  room.html
backend/test_project/data/: events.csv  organizations.csv  rooms.csv  users.csv
backend/test_project/events/admin/: __init__.py  event.py  organization.py
backend/test_project/events/management/commands/: import_csv.py
backend/test_project/events/migrations/: 0001_initial.py  0002_auto_20240119_2125.py
backend/test_project/events/models/: event.py  organization.py
backend/test_project/test_project/: asgi.py  settings.py  urls.py
backend/test_project/users/: admin.py  models.py
backend/test_project/users/migrations/: 0001_initial.py
nginx/: default.conf
